--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,9 @@ project(RobotsGame)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(RobotsGame test_dir/main.cpp test_dir/test1.c)
+add_executable(RobotsGame test_dir/main.cpp)
 add_executable(Server app_server/main.c app_server/server.c app_server/server.h)
-add_executable(Client app_client/main.c app_client/client.c app_client/client.h)
+add_executable(Client app_client/client.cpp app_client/client.h app_client/interface.cpp app_client/interface.h)
 
 set(SFML_STATIC_LIBRARIES TRUE)
 set(SFML_DIR C:/SFML/lib/cmake/SFML)
@@ -14,4 +14,4 @@ find_package(SFML COMPONENTS system window audio graphics network REQUIRED)
 include_directories(C:/SFML/include)
 target_link_libraries(RobotsGame sfml-system sfml-graphics sfml-audio sfml-audio)
 target_link_libraries(Server ws2_32)
-target_link_libraries(Client ws2_32)
+target_link_libraries(Client ws2_32 sfml-system sfml-graphics sfml-audio sfml-audio)
