--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(RobotsGame)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(RobotsGame test_dir/main.cpp app_client/game.h app_client/game.c)
+add_executable(RobotsGame test_dir/main2.cpp test_dir/field.cpp test_dir/field.h)
 add_executable(Server app_server/main.c app_server/server.c app_server/server.h app_server/requests.c app_server/requests.h sqlite/sqlite3.c SQL/database.c SQL/database.h SQL/data_scheme.c SQL/data_scheme.h)
 add_executable(Client app_client/client.c app_client/client.h app_client/interface.cpp app_client/interface.h app_client/main.cpp app_client/intfc_classes.cpp app_client/intfc_classes.h app_client/game.c app_client/game.h SQL/data_scheme.c SQL/data_scheme.h)
 
